Add htmlproof to Gemfile

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: ruby
 
+rvm:
+  - 2.2
+
 install:
   - bundle install
 
-before_script:
-  - travis_retry gem install htmlproof
-  
 script: jekyll build && htmlproof ./_site
 
 env:
