--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,13 @@
 # Site settings
 title: Matheus Sampaio's Blog
+author: Matheus Sampaio
 email: matheus1401@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://matheussampaio.github.io" # the base hostname & protocol for your site
+
+
 twitter_username: matheussampaio
 github_username:  matheussampaio
 exclude: [vendor]
