--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,13 @@
 # Site settings
-title: Matheus Sampaio's Blog
+title: Matheus Sampaio
 author: Matheus Sampaio
 email: matheus1401@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-
+  Sobre tudo um pouco...
+footer_description: > # this means to ignore newlines until "baseurl:"
+  @ 2015 Matheus Sampaio
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://matheussampaio.github.io" # the base hostname & protocol for your site
-
+# url: "http://matheussampaio.github.io" # the base hostname & protocol for your site
 
 twitter_username: matheussampaio
 github_username:  matheussampaio
