Add some plugins and url

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: ruby
 
+sudo: false
+
 notifications:
   email:
     on_success: change # default: always
     on_failure: change # default: always
-    
+
 rvm:
   - 2.2
 
