--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
 title: Matheus Sampaio
 author: Matheus Sampaio
-email: matheus1401@gmail.com
+email: matheus@sampaio.us
 description: > # this means to ignore newlines until "baseurl:"
-  Sobre tudo um pouco...
+  About everything.
 footer_description: > # this means to ignore newlines until "baseurl:"
   @ 2015 Matheus Sampaio
 baseurl: "" # the subpath of your site, e.g. /blog/
-# url: "http://matheussampaio.github.io" # the base hostname & protocol for your site
+url: "http://matheus.sampaio.us" # the base hostname & protocol for your site
 
 twitter_username: matheussampaio
 github_username:  matheussampaio
