--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Matheus Sampaio
+title: Matheus Sampaio's Blog
 author: Matheus Sampaio
 email: matheus@sampaio.us
 description: > # this means to ignore newlines until "baseurl:"
@@ -11,6 +11,8 @@ url: "http://matheus.sampaio.us" # the base hostname & protocol for your site
 
 twitter_username: matheussampaio
 github_username:  matheussampaio
+linkedin_username: matheussampaio
+
 exclude: [vendor]
 
 # Build settings
