--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: matheus@sampaio.us
 description: > # this means to ignore newlines until "baseurl:"
   About everything.
 footer_description: > # this means to ignore newlines until "baseurl:"
-  @ 2015 Matheus Sampaio
+  @ 2015-2019 Matheus Sampaio
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://matheus.sampaio.us" # the base hostname & protocol for your site
 
@@ -13,10 +13,17 @@ twitter_username: matheussampaio
 github_username:  matheussampaio
 linkedin_username: matheussampaio
 
+timezone: America/Recife
+
+encoding: "utf-8"
+
 exclude: [vendor]
 
 # Build settings
 markdown: kramdown
 
-gems:
+sass:
+  style: compact
+
+plugins:
   - jemoji
