--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   blog:
     build:
       context: .
-    command: bundle exec jekyll serve --host 0.0.0.0 --drafts --livereload --incremental --unpublished --future
+    command: bundle exec jekyll serve --host 0.0.0.0 --livereload --unpublished
     tty: true
     ports:
       - "4000:4000"
