--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title_left    : ""
 title_right   : "Matheus Sampaio"
 description   : "Blog"
 keywords      : "node, git, react, vim, zsh"
-url           : http://matheus.sampaio.us
+url           : https://matheus.sampaio.us
 baseurl       : "" # apply repo name like "/myproject" if used under gh-pages branch, else (under master branch) just leave empty/blank
 cover         : "" # image uri like logo/cover image for site seo
 
